Bug 1733671 - [devtools] Support dark mode for aboutdebugging profiler popup header r=bomsy
Differential Revision: https://phabricator.services.mozilla.com/D130408

--- a/devtools/client/aboutdebugging/src/base.css
+++ b/devtools/client/aboutdebugging/src/base.css
@@ -49,6 +49,9 @@
   --primary-button-hover-background-color: var(--blue-70);
   --primary-button-active-background-color: var(--blue-80);
 
+  --popup-header-background-color: var(--grey-20);
+  --popup-header-color: var(--grey-90);
+
   /* Colors from Photon */
   --success-background: #30e60b;
   --warning-background: #fffbd6; /* from the Web Console */
@@ -107,8 +110,8 @@
   --micro-font-size: 11px;
   --monospace-font-family: monospace;
 
-  --card-separator-color: var(--grey-20);
   --card-shadow-blur-radius: var(--base-unit);
+
 
   /*
    * Variables particular to about:debugging
@@ -154,6 +157,9 @@
 
     --icon-ok-color: var(--white-100);
     --icon-info-color: var(--white-100);
+
+    --popup-header-background-color: var(--grey-50);
+    --popup-header-color: var(--white-100);
 
     /*
      * From common.inc.css
@@ -411,7 +417,7 @@ Form controls
   background: transparent;
   border: none;
   border-radius: calc(var(--base-unit) / 2);
-  fill: var(--grey-90-a80);
+  fill: var(--button-color);
   height: calc(var(--base-unit) * 6);
   padding: calc(var(--base-unit));
   width: calc(var(--base-unit) * 6);
@@ -420,11 +426,11 @@ Form controls
 }
 
 .ghost-button:hover {
-  background-color: var(--grey-30);
+  background: var(--button-hover-background-color);
 }
 
 .ghost-button:active {
-  background-color: var(--grey-40);
+  background: var(--button-active-background-color);
 }
 
 /* Standard inputs */
